plugins {
    id 'java'
}

group = 'io.github.flozano'
version = '1.0-SNAPSHOT'

repositories {
    mavenCentral()
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

dependencies {
    implementation platform('org.eclipse.jetty.ee10:jetty-ee10-bom:12.0.6')
    implementation 'org.eclipse.jetty.ee10:jetty-ee10-servlet'
    implementation 'commons-io:commons-io:2.15.1'
    implementation 'org.apache.commons:commons-lang3:3.14.0'
    implementation 'ch.qos.logback:logback-classic:1.5.1'
    testImplementation platform('org.junit:junit-bom:5.9.1')
    testImplementation 'org.junit.jupiter:junit-jupiter'
    testImplementation 'org.junit.jupiter:junit-jupiter-params'

}

test {
    useJUnitPlatform()
}